--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -20,7 +20,7 @@ order += "load"
 order += "tztime local"
 
 tztime local {
-    format = "   %Y-%m-%d %H:%M:%S "
+    format = "   %b %d %H:%M "
 }
 
 disk "/" {
