--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -18,6 +18,7 @@ order += "disk /"
 order += "cpu_usage"
 order += "load"
 order += "tztime local"
+order += "read_file hostname"
 
 tztime local {
     format = "   %b %d %H:%M "
@@ -52,4 +53,9 @@ battery 0 {
     #last_full_capacity = true
     status_full = "   FULL "
     path = "/sys/class/power_supply/BAT%d/uevent"
+}
+
+read_file hostname {
+    format = " %content |"
+    path = "/etc/hostname"
 }
