--- a/i3/config
+++ b/i3/config
@@ -27,12 +27,12 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# Use amixer to adjust volume
+# Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer sset Speaker 5%+ && notify-send "Volume Up 5%" -t 1500 && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer sset Speaker 5%- && notify-send "Volume Down 5%" -t 1500 && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id amixer sset Speaker toggle && notify-send "Volume Muted 0%" -t 1500 && $refresh_i3status
-# bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # start a terminal
 bindsym $mod+Return exec urxvtc
