--- a/i3/config
+++ b/i3/config
@@ -40,6 +40,9 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# turn on/off backlight
+bindsym Scroll_Lock exec /home/max/shared/bin/backlight.sh
+
 # start a terminal
 bindsym $mod+Return exec urxvtc
 
