--- a/i3/config
+++ b/i3/config
@@ -270,8 +270,7 @@ client.unfocused 	#333333 #222222 #888888 #292d2e #222222
 client.urgent 		$red1 $red1 $white2 $red1 $red1
 client.placeholder 	#000000 #0c0c0c $white2 #000000 0c0c0c
 for_window [class="URxvt*"] border pixel 1
-for_window [class="kitty*"] border pixel 1
-for_window [class="org.wezfurlong.wezterm*"] border pixel 1
+#for_window [class="Emacs*"] border pixel 1
 
 # Terminal scratchpad with tmux
 # for_window [instance="urxvt_scratchpad"] move to scratchpad, border none
