--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -76,7 +76,7 @@ set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 ## Vedi il plugin di Neovim
 ## See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#| grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
@@ -103,7 +103,7 @@ set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
 
-set-window-option -g monitor-activity off
+# set-window-option -g monitor-activity off
 set -g bell-action none
 
 #######
@@ -121,6 +121,7 @@ set -g status-justify "centre"
 set -g status-left-length 15
 set -g status-left "#{?client_prefix,#[reverse] #S #[noreverse], #S }"
 set -g status-right "#h "
+set -g status off
 bind-key b set-option status
 
 run -b "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
