Inserito descrizione nel workspace 4:FILE

--- a/i3/config
+++ b/i3/config
@@ -100,8 +100,8 @@ bindsym $mod+Control+t split toggle
 # Define names for default workspaces
 set $ws1 "1:Web"
 set $ws2 "2:Term"
-set $ws3 "3"
-set $ws4 "4"
+set $ws3 "3:Emacs"
+set $ws4 "4:FILE"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
